// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JSON > can work on JSON with Array 1`] = `
{
  "loc": {
    "end": {
      "column": 19,
      "line": 6,
      "offset": 65,
    },
    "start": {
      "column": 14,
      "line": 6,
      "offset": 60,
    },
  },
  "type": "String",
  "value": "bar",
}
`;

exports[`JSON > can work on JSON with Array 2`] = `
{
  "loc": {
    "end": {
      "column": 12,
      "line": 6,
      "offset": 58,
    },
    "start": {
      "column": 7,
      "line": 6,
      "offset": 53,
    },
  },
  "type": "String",
  "value": "foo",
}
`;

exports[`JSON > can work on JSON with Array with empty children 1`] = `"/arr/4"`;

exports[`JSON > can work on JSON with a key named meta 1`] = `
{
  "loc": {
    "end": {
      "column": 19,
      "line": 4,
      "offset": 51,
    },
    "start": {
      "column": 15,
      "line": 4,
      "offset": 47,
    },
  },
  "type": "Boolean",
  "value": true,
}
`;

exports[`JSON > can work on JSON with a key named meta 2`] = `
{
  "loc": {
    "end": {
      "column": 13,
      "line": 4,
      "offset": 45,
    },
    "start": {
      "column": 5,
      "line": 4,
      "offset": 37,
    },
  },
  "type": "String",
  "value": "isMeta",
}
`;

exports[`JSON > can work on JSON with a key named value 1`] = `
{
  "loc": {
    "end": {
      "column": 14,
      "line": 3,
      "offset": 33,
    },
    "start": {
      "column": 12,
      "line": 3,
      "offset": 31,
    },
  },
  "type": "Number",
  "value": 20,
}
`;

exports[`JSON > can work on JSON with a key named value 2`] = `
{
  "loc": {
    "end": {
      "column": 10,
      "line": 3,
      "offset": 29,
    },
    "start": {
      "column": 3,
      "line": 3,
      "offset": 22,
    },
  },
  "type": "String",
  "value": "value",
}
`;

exports[`JSON > can work on simple JSON 1`] = `
{
  "loc": {
    "end": {
      "column": 15,
      "line": 2,
      "offset": 17,
    },
    "start": {
      "column": 10,
      "line": 2,
      "offset": 12,
    },
  },
  "type": "String",
  "value": "bar",
}
`;

exports[`JSON > can work on simple JSON 2`] = `
{
  "loc": {
    "end": {
      "column": 8,
      "line": 2,
      "offset": 10,
    },
    "start": {
      "column": 3,
      "line": 2,
      "offset": 5,
    },
  },
  "type": "String",
  "value": "foo",
}
`;

exports[`JSON > can work with unescaped JSON pointers with ~0 1`] = `
{
  "loc": {
    "end": {
      "column": 17,
      "line": 7,
      "offset": 99,
    },
    "start": {
      "column": 16,
      "line": 7,
      "offset": 98,
    },
  },
  "type": "Number",
  "value": 2,
}
`;

exports[`JSON > can work with unescaped JSON pointers with ~1 1`] = `
{
  "loc": {
    "end": {
      "column": 17,
      "line": 4,
      "offset": 52,
    },
    "start": {
      "column": 16,
      "line": 4,
      "offset": 51,
    },
  },
  "type": "Number",
  "value": 1,
}
`;

exports[`JSON > should not throw error when children is array 1`] = `"/arr/3"`;
